--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# requirements.txt
 streamlit==1.28.0
-pandas==1.5.3
-plotly==5.17.0
-PyMuPDF==1.23.5
+pandas==1.5.0
+numpy==1.24.0
+nltk==3.8
+plotly==5.15.0
+matplotlib==3.6.0
 python-docx==0.8.11
-spacy==3.6.1
-scikit-learn==1.3.0
-nltk==3.8.1
-textstat==0.7.3
+PyPDF2==3.0.0
